# convection

./: CMakeLists.txt  README  colors.cpp  colors.h  colors.ui  convection_solver.cpp  convection_solver.h  input.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  window.cpp  window.h  window.ui
